--- a/app.css
+++ b/app.css
@@ -9,7 +9,7 @@
 }
 .section-image {
     display: block;
-    margin: 0 auto 20px; /* Center the image horizontally and add space below it */
+    margin: 0 auto 20px;/* Center the image horizontally and add space below it */
     width: 100px; /* Set the width of the image */
     height: auto; /* Let the height adjust automatically to maintain aspect ratio */
 }
@@ -109,22 +109,38 @@ header p {
 }
 nav {
     display: flex;
-    justify-content: flex-end; /* Align the menu to the right */
-    flex-grow: 1; /* Allow the nav to grow and occupy remaining space */
+    justify-content: flex-start; /* Align the menu to the right */
     margin-right: 30px; /* Leave a few pixels of space on the right side */
-}
+    margin-left: 20px; /* Add a margin to the left side */
 
+    /* flex-grow: 1; /* Allow the nav to grow and occupy remaining space */
+    /*margin-right: 30px; /* Leave a few pixels of space on the right side */
+}
 nav ul {
     list-style-type: none;
-    margin: 0;
+    margin: 50;
     padding: 0;
     display: flex;
+    flex-wrap: wrap; 
+
 }
 
 nav ul li {
-    margin-left: 20px;
+    margin-left: 10px;
+    /* flex: 1 0 100%; 
+    max-width: calc(20% - 20px); */
+}
+/* Adjust margin for the first item */
+nav ul li:first-child {
+    margin-left: 20;
 }
 
+/* Adjust margin between list items */
+@media only screen and (min-width: 768px) {
+    nav ul li {
+        margin-left: 20px;
+    }
+}
 nav ul li a {
     color: black;
     text-decoration: none;
@@ -182,7 +198,7 @@ header .top-section {
 
 
 .square-box .text {
-    margin-top: 0px; /* Adjust spacing from the top */
+    margin-top: 10px; /* Adjust spacing from the top */
 }
 
 .square-box .text p {
@@ -197,21 +213,30 @@ header .top-section {
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    margin: 0; /* Remove all margins */
+    padding: 0; /* Remove all padding */
 }
-
 #video-background {
     position: absolute;
-    top: 30%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the video covers the entire container */
+}
+/* #video-background {
+    position: absolute;
+    top: 50%;
     left: 50%;
     min-width: 100%;
     max-width: 100%;
 
-    min-height: 50%;
-    max-height: 90%;
+    min-height: 100%;
+    max-height: 100%;
     width: auto;
     height: auto;
     transform: translate(-50%, -50%);
-}
+} */
  .photo-section,
 .photo-section-01,
 .photo-section-02,
@@ -323,11 +348,6 @@ header .top-section {
         left: 50%; /* Align top section to center horizontally */
         transform: translateX(-50%); /* Center top section horizontally */
     }
-
-    /* Adjust video section styles for smaller screens */
-    .video-section {
-        height: 50vh; /* Reduce height of video section for smaller screens */
-    }
 }
 
 .parallax-section .background {
@@ -374,4 +394,21 @@ header .top-section {
         /* width: 70vw; Adjust as needed */
 
     }
-    /* Adjust photo section styles for smaller screens */
+    .iframe-container {
+        max-width: 100%; /* Set the maximum width of the container */
+        margin: 0 auto; /* Center the container horizontally */
+    }
+    
+    .iframe-container iframe {
+        width: 100%; /* Make the iframe fill the container */
+    }
+    .map-image-container {
+        max-width: 100%; /* Set the maximum width of the container */
+        margin: 0 auto; /* Center the container horizontally */
+    }
+    
+    .map-image-container img {
+        width: 100%; /* Make the image fill the container */
+        height: auto; /* Maintain aspect ratio */
+    }
+    
